nested-ec2.yml
AWSTemplateFormatVersion: 2010-09-09

Description: |
  CloudFormation template to launch EC2 instances with security groups

Resources:

  FirstInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for the first EC2 instance
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0               

  FirstEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-051f8a213df8bc089
      InstanceType: t2.micro
      SecurityGroupIds:
        - !Ref FirstInstanceSecurityGroup
      Tags:
        - Key: Name
          Value: first aws machine 
      UserData:
        Fn::Base64: |
          #!/bin/bash
          yum install aws-cli -y
          aws configure set aws_access_key_id ACCESS_KEY_ID
          aws configure set aws_secret_access_key SECRET_ACCESS_KEY_ID
          aws configure set default.region us-east-1

          aws s3 mb s3://new-ec2-instance
          aws s3 cp s3://temp-repository-1/new1.yml /tmp/new2.yml

          aws cloudformation create-stack --stack-name SecondEC2InstanceStack --template-body file:///tmp/new2.yml

Outputs:
  FirstInstancePublicIP:
    Description: Public IP address of the first EC2 instance
    Value: !GetAtt FirstEC2Instance.PublicIp
